All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/SVMX_Job_Logs__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>ServiceMax Job Logs</description>
    <label>ServiceMax Job Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceMax Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>