All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Apex_CPU_Time__c.field-meta.xml
<CustomField>
    <fullName>Apex_CPU_Time__c</fullName>
    <description>For sync time log records, this field stores the CPU time for executing Apex code, and any processes that are called from the code, such as package code and workflows. This excludes the time spent in database for SOQL and DML operations. It is in seconds if Type is MASTER_*; milliseconds otherwise.</description>
    <inlineHelpText>For sync time log records: CPU time for executing Apex code, and any processes that are called from the code like package code and workflows. This excludes the time spent in DB for SOQL &amp; DML. It is in seconds if Type is MASTER_*; milliseconds otherwise.</inlineHelpText>
    <label>Apex CPU Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>