All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <description>For sync time log records, this field stores the status of the sync request: InProgress - Indicates receipt of sync request by the server; Completed / Failed - Indicates end of processing of sync request by the server.</description>
    <inlineHelpText>For sync time log records, this field stores the status of the sync request: InProgress - Indicates receipt of sync request by the server; Completed / Failed - Indicates end of processing of sync request by the server.</inlineHelpText>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>