All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Client_Response_Processing_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Client_Response_Processing_Timestamp__c</fullName>
    <description>For sync time log records, this field stores the date time at which the processing of sync response from server was completed by the client app.</description>
    <inlineHelpText>For sync time log records, this field stores the date time at which the processing of sync response from server was completed by the client app.</inlineHelpText>
    <label>Client Response Processing Timestamp</label>
    <type>DateTime</type>
</CustomField>