All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Client_Version__c.field-meta.xml
<CustomField>
    <fullName>Client_Version__c</fullName>
    <description>For sync time log records, this field stores the version number of mobile client application that initiated the sync request.</description>
    <inlineHelpText>For sync time log records, this field stores the version number of mobile client application that initiated the sync request.</inlineHelpText>
    <label>Client Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>