All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>For master records (Type = MASTER_*), server processing time in seconds, with the value calculated using this formula: Response Returned Timestamp - Request Received Timestamp. For other sync time log records, it identifies the sync request purpose (for example,  VALIDATE_PROFILE, MOBILE_DEVICE_TAGS, and so on).</description>
    <inlineHelpText>For master records (Type = MASTER_*), server processing time in seconds: Response Returned Timestamp - Request Received Timestamp. For other sync time log records, it identifies the sync request purpose (e.g.:  VALIDATE_PROFILE, MOBILE_DEVICE_TAGS).</inlineHelpText>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>