All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>For master records (Type = MASTER_*) total network latency in seconds, with the value calculated using this formula: (Request Received Timestamp - Log Timestamp) + (Client Response Receive Timestamp - Response Returned Timestamp). For other sync time log records, it identifies the sync request type (SYNC / META_SYNC).</description>
    <inlineHelpText>If Type = MASTER_*, network latency in seconds: (Request Received Timestamp - Log Timestamp) + (Client Response Receive Timestamp - Response Returned Timestamp). For other sync time log records, it identifies the sync request type (SYNC / META_SYNC).</inlineHelpText>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>