All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <description>For master records (Type = MASTER_*):  Full Name of the mobile client user who initiated the sync request from the client app. For other sync time log records: User&apos;s Salesforce Record Id.</description>
    <inlineHelpText>For master records (Type = MASTER_*):  Full Name of the mobile client user who initiated the sync request from the client app. For other sync time log records: User&apos;s Salesforce Record Id.</inlineHelpText>
    <label>Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>