All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Log_Category__c.field-meta.xml
<CustomField>
    <fullName>Log_Category__c</fullName>
    <description>For sync time log records, it indicates the type of sync operation initiated by the mobile user (INITIAL SYNC, INCREMENTAL DATA SYNC, CONFIG SYNC, SFM SEARCH). For logs pushed by client app, it is the log category (Application Level/Performance Level).</description>
    <inlineHelpText>For sync time log records, it indicates the type of sync operation initiated by the mobile user (INITIAL SYNC, INCREMENTAL DATA SYNC, CONFIG SYNC, SFM SEARCH). For logs pushed by client app, it is the log category (Application Level/Performance Level).</inlineHelpText>
    <label>Log Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Level</fullName>
            </value>
            <value>
                <fullName>Performance Level</fullName>
            </value>
            <value>
                <fullName>GET PRICE SYNC</fullName>
            </value>
            <value>
                <fullName>CONFIG SYNC</fullName>
            </value>
            <value>
                <fullName>INITIAL SYNC</fullName>
            </value>
            <value>
                <fullName>INCREMENTAL DATA SYNC</fullName>
            </value>
            <value>
                <fullName>SFM SEARCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>