All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Log_Context__c.field-meta.xml
<CustomField>
    <fullName>Log_Context__c</fullName>
    <description>For sync time log records, it is the time taken by the client app to process sync response, with the value calculated using this formula: Client Response Processing Timestamp - Client Response Receive Timestamp.  It is in seconds if Type is MASTER_*; milliseconds otherwise.</description>
    <inlineHelpText>For sync time log records, it is the time taken by the client app to process sync response: Client Response Processing Timestamp - Client Response Receive Timestamp.  It is in seconds if Type is MASTER_*; milliseconds otherwise.</inlineHelpText>
    <label>Log Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>