All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Log_level__c.field-meta.xml
<CustomField>
    <fullName>Log_level__c</fullName>
    <description>For master records (Type = MASTER_*), it is the time taken in seconds for database operations in server, with the value calculated using this formula: Server Processing Time - Code Execution Time.  For logs pushed by client app, it is the the level (1/2/3) of log message. Messages with level 3 are logged when the client app log level is Verbose. Level 2 messages are logged for the log level Warning. Level 1 messages are logged for the log level Error.</description>
    <inlineHelpText>For master records (Type = MASTER_*), it is the time taken in seconds for DB operations in server: Server Processing Time - Code Execution Time.  For logs pushed by client app, it is the the level (1/2/3) of log message (3 logged when level is verbose).</inlineHelpText>
    <label>Log level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>