All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>For master records (Type = MASTER_*), it is the total time taken in seconds for a sync request (e.g. for INITIAL SYNC, CONFIG SYNC, and so on), with the value calculated using this formula: Client Response Processing Timestamp of the last web service call for the sync request - Sync Start Time of the first web service call for the sync request. This value gets updated when the sync is in progress, with every web service call. For logs pushed by client app, this is the log message. This is technical and is meant for troubleshooting by ServiceMax.</description>
    <inlineHelpText>For master records (Type = MASTER_*), time taken in seconds for a sync request (e.g. INITIAL SYNC, CONFIG SYNC): Client Response Processing Timestamp of last WS call - Log Timestamp of first WS call. For logs pushed by client app, this is the log message.</inlineHelpText>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>