All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <description>If Type = MASTER_*:  Profile Name of the ServiceMax Group Profile of mobile user. For other sync time log records: Salesforce Record Id of the ServiceMax Group Profile of mobile user. For logs pushed by client app: Mobile user&apos;s Salesforce Record Id.</description>
    <inlineHelpText>If Type = MASTER_*:  Profile Name of the ServiceMax Group Profile of mobile user. For other sync time log records: Salesforce Record Id of the ServiceMax Group Profile of mobile user. For logs pushed by client app: Mobile user&apos;s Salesforce Record Id.</inlineHelpText>
    <label>Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>