All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Request_Received_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Request_Received_Timestamp__c</fullName>
    <description>Date time at which a sync request from a client app is received by the server.</description>
    <inlineHelpText>Date time at which a sync request from a client app is received by the server.</inlineHelpText>
    <label>Request Received Timestamp</label>
    <type>DateTime</type>
</CustomField>