All_Component_DX/force-app/main/default/objects/SVMX_Job_Logs__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Stores the name of the device that initiated the sync request. In master sync time log records which store cumulative durations, the device name is stored with the prefix MASTER_.</description>
    <inlineHelpText>Stores the name of the device that initiated the sync request. In master sync time log records which store cumulative durations, the device name is stored with the prefix MASTER_.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OptiMax</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>ServicePower</fullName>
            </value>
            <value>
                <fullName>MASTER_IPAD</fullName>
            </value>
            <value>
                <fullName>MASTER_IPHONE</fullName>
            </value>
            <value>
                <fullName>MASTER_MFL</fullName>
            </value>
            <value>
                <fullName>MASTER_ANDROID</fullName>
            </value>
            <value>
                <fullName>MFL</fullName>
            </value>
            <value>
                <fullName>ANDROID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>